--- a/pom.xml
+++ b/pom.xml
@@ -77,14 +77,14 @@
     <packaging>pom</packaging>
 
     <properties>
-        <snap.version>6.0.0-SNAPSHOT</snap.version>
+        <snap.version>6.0.0-Skywatch-SNAPSHOT</snap.version>
         <!--
             snap.version is the Maven module version.
             snap.nbmSpecVersion is the NetBeans module specification version.
             It is used to filter manifest.mf and set the manifest's "OpenIDE-Module-Specification-Version" header.
             This is necessary to make NetBeans modules updatable and independent from the Maven version (= snap.version).
         -->
-        <s3tbx.version>6.0.0-SNAPSHOT</s3tbx.version>
+        <s3tbx.version>6.0.0-Skywatch-SNAPSHOT</s3tbx.version>
         <netbeans.version>RELEASE82</netbeans.version>
         <javahelp.version>2.0.05</javahelp.version>
         <netcdf.version>4.3.22</netcdf.version>
@@ -432,7 +432,7 @@
                             <configuration>
                                 <name>s3tbx.nbmSpecVersion</name>
                                 <value>${project.version}</value>
-                                <regex>-SNAPSHOT</regex>
+                                <regex>-Skywatch-SNAPSHOT</regex>
                                 <replacement>.0</replacement>
                                 <failIfNoMatch>false</failIfNoMatch>
                             </configuration>
