--- a/s3tbx-landsat-reader/pom.xml
+++ b/s3tbx-landsat-reader/pom.xml
@@ -40,14 +40,14 @@
             <version>${snap.version}</version>
         </dependency>
         <!-- for bzip2 de-compression-->
-        <dependency>
+        <!--dependency>
             <groupId>edu.ucar</groupId>
             <artifactId>netcdf</artifactId>
         </dependency>
         <dependency>
             <groupId>org.xeustechnologies</groupId>
             <artifactId>jtar</artifactId>
-        </dependency>
+        </dependency-->
 
         <dependency>
             <groupId>junit</groupId>
